# robustness-of-bayesian-deep-learning-for-uncertainty-quantification

./: .gitignore  README.md  pyproject.toml
bnn-medmnist/: .gitignore  README.md  pyproject.toml
bnn-medmnist/configs/data/: pneumoniamnist.yaml
bnn-medmnist/configs/experiment/: pneumonia_baseline.yaml  pneumonia_lll.yaml
bnn-medmnist/configs/method/: deterministic.yaml  last_layer_laplace.yaml
bnn-medmnist/notebooks/: 01_explore_data.ipynb
bnn-medmnist/outputs/pneumonia_baseline/20260510_160647/: checkpoint_path.txt  config.yaml  run_info.txt  test_metrics.json
bnn-medmnist/outputs/pneumonia_lll/20260510_191012/: run_info.txt
bnn-medmnist/scripts/: evaluate.py  run_local.sh  train.py
bnn-medmnist/src/bnn_medmnist/data/: __init__.py  medmnist_loader.py
bnn-medmnist/src/bnn_medmnist/evaluation/: __init__.py  metrics.py  ood.py  uncertainty.py
bnn-medmnist/src/bnn_medmnist/methods/: __init__.py  base.py  deterministic.py  last_layer_laplace.py
bnn-medmnist/src/bnn_medmnist/models/: small_cnn.py
bnn-medmnist/src/bnn_medmnist/training/: trainer.py
bnn-medmnist/src/bnn_medmnist/utils/: __init__.py  config.py  logging.py  seeding.py
docs/: approach_first_layer_laplace.md  architecture_choice.md  evaluation_overview.md  results_data_efficiency.md  results_deep_ensemble.md  results_long_tail.md  results_resnet18_baseline_vs_laplace.md  ssh_and_slurm_tutorial.md
notebooks/: 01_explore_data.ipynb
reproduction/: requirements.txt
results/: all_experiments_raw.csv  all_experiments_summary.csv  data_efficiency_raw.csv  data_efficiency_summary.csv
(+1034 files in other folders)
